alignment fixing

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -57,3 +57,12 @@ h3,h2,p
 .mat-card-image {
 	height:200px;
 }
+
+ @media screen and (max-width: 768px) {
+	.card{
+		max-width: 100%;
+		display: block;
+	    margin-left: auto;
+	    margin-right: auto;
+	} 	
+}
